Bug 12163 - Fix missing arguments and format elements in format strings
Summary: Fix missing arguments and format elements in format strings
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.5.0rc2
Hardware: All All
: P5 normal (vote)
Target Milestone: 4.5
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-18 14:33 UTC by Amitay Isaacs
Modified: 2016-08-28 16:00 UTC (History)
5 users (show)

See Also:


Attachments
Patches for v4-5 branch (2.36 KB, patch)
2016-08-19 05:12 UTC, Amitay Isaacs
martins: review+
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Amitay Isaacs 2016-08-18 14:33:26 UTC
In source3/lib/util_tdb.c, argument for %d is missing.

       len = cbuf_printf(ost, "%d:");
Comment 1 Amitay Isaacs 2016-08-18 15:31:39 UTC
In source3/libnet/libnet_join.c, missing element for format string

	"failed to find DC for domain %s",
Comment 2 Amitay Isaacs 2016-08-19 05:12:16 UTC
Created attachment 12386 [details]
Patches for v4-5 branch
Comment 3 Amitay Isaacs 2016-08-19 05:37:16 UTC
Hi Karolin,

Another one for v4-5 branch.
Comment 4 Stefan Metzmacher 2016-08-24 09:47:59 UTC
Pushed to autobuild-v4-5-test.
Comment 5 Stefan Metzmacher 2016-08-28 15:55:57 UTC
Pushed to v4-5-test.