s3-lib: Pass missing argument for format string

BUG: https://bugzilla.samba.org/show_bug.cgi?id=12163

Signed-off-by: Amitay Isaacs <amitay@gmail.com>
Reviewed-by: Volker Lendecke <vl@samba.org>
(cherry picked from commit a37048f8d49eb72ea89a8708032d4d04dac59f3d)